--- a/styles/scss/partials/utilities/_mixins.scss
+++ b/styles/scss/partials/utilities/_mixins.scss
@@ -4,7 +4,7 @@
 
 @mixin section() {
     position: relative;
-    width: 100vw;
+    width: 100%;
 }
 
 @mixin section-container() {
